# Beer-Tap-Dispenser

./: Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dispenser_commands.py  dispenser_queries.py
app/core/: api.py  database.py  db.py
app/crud/: dispenser.py
app/crud/exception/: dispenser_already_opened_closed_exception.py  dispenser_not_found_exception.py
app/models/: dispenser.py  usage.py
app/schemas/: dispenser.py  usage.py
app/services/: reports_handler.py
tests/: apiutils.py  conftest.py  crudutils.py
tests/api/: test_dispenser_commands.py  test_dispenser_queries.py
tests/crud/: test_dispenser.py
tests/services/: test_reports_handler.py
