[tool.poetry]
name = "beer tap dispenser"
version = "0.1.0"
description = ""
authors = ["jordi <jordi@codedservices.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-cov = "^4.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
